# recutils

./: .gitignore  ChangeLog  Makefile.am  configure.ac
guile/: HACKING  Makefile.am  libguile-recutils.c  pre-inst-env.in  recutils.scm  test-driver.scm
guile/tests/: fields.scm  records.scm
src/: Makefile.am  rec-crypt.c  rec-sex-ast.h  rec-sex-lex.l
torture/rec-parser/: rec-parse-record-str.c  rec-parse-record.c
torture/rec-writer/: rec-write-comment-str.c  rec-write-field-name-str.c  rec-write-field-str.c
torture/utils/: recsel.sh
utils/: Makefile.am  hello.scm  mdb2rec.c  recfix.c  recsel.c  recutl.h
